Fix: Adjust alignment of restaurant filtering

--- a/css/styles3.css
+++ b/css/styles3.css
@@ -115,16 +115,18 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  height: auto;
   background-color: #3397DB;
+  display: flex;
   align-items: center;
 }
 .filter-options h2 {
   color: white;
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
+  /* padding-top: 10px; */
 }
 .filter-options select {
   background-color: white;
